# emnapi-main-thread-init-repro

./: Cargo.toml  ISSUE_BODY.md  README.md  binding.cjs  package-lock.json  package.json  repro.sh  run.mjs  stress.mjs  wasi-worker.mjs  worker.mjs
.cargo/: config.toml
scripts/: build-wasm.mjs  repro.mjs
src/: lib.rs
